# common

./: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
scripts/stats/: README.md  savings_potential.sql  shrinkflation_count.sql  validate_launch_stats.py
src/cartsnitch_common/: __init__.py  constants.py  database.py  events.py  normalization.py
src/cartsnitch_common/models/: __init__.py  coupon.py  price.py  product.py  purchase.py  shrinkflation.py  store.py  user.py
src/cartsnitch_common/pipeline/: __init__.py  matching.py  price_tracking.py  receipt.py  shrinkflation.py
src/cartsnitch_common/schemas/: __init__.py  coupon.py  events.py  price.py  product.py  shrinkflation.py  store.py  user.py
src/cartsnitch_common/seed/: __init__.py  __main__.py  config.py  runner.py
src/cartsnitch_common/seed/generators/: __init__.py  coupons.py  prices.py  products.py  purchases.py  shrinkflation.py  stores.py  users.py
tests/: conftest.py  test_models.py  test_normalization.py  test_pipeline_e2e.py  test_pipeline_matching.py  test_pipeline_price.py  test_pipeline_receipt.py  test_pipeline_shrinkflation.py  test_schemas.py  test_seed.py
